--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav-style {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-style img {
+  max-height: 13vh;
+}
