--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
+body { 
+  background: url(./assets/cookingbg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  opacity: 0.9;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,3 +29,5 @@ code {
 .nav-style img {
   max-height: 13vh;
 }
+
+
