--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,20 +6,42 @@ body {
   background-size: cover;
   opacity: 0.9;
   background-color: black;
+
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* width */
+::-webkit-scrollbar {
+  width: 0.5vh;
+
+}
+
+/*Custom Scroll Bar Style */
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border: 1px solid hsla(206, 30%, 51%, 0.548); 
+  border-radius: 3px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border: 1px solid hsla(206, 30%, 51%, 0.548); 
+  border-radius: 3px;
+  opacity: 0.8;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(255, 255, 255); 
 }
 
 .nav-style {
@@ -31,4 +53,13 @@ code {
   max-height: 13vh;
 }
 
+
+/* Browse Component Stylings */
+
+.creation-list {
+  margin: 1vh;
+  
+  font-size: 1.3rem;
+
+}
 
